# license-plate-detection-system

license plate/: .gitignore  Dockerfile  README.md  docker-compose.yaml  ocr.py  pyproject.toml
license plate/data/: dataset.yaml
license plate/data/labels/train/: frame_0006_jpg.rf.bea5648bef891aa7ab0d272267348f83.txt  frame_0008_jpg.rf.c3370aa3e3117bd1a3cdd21aed9f15a4.txt  frame_0013_jpg.rf.7979dc2b2046ae948a3aafe2df15c148.txt  frame_0015_jpg.rf.2ad1761ab31375bbef29da8d6296ebb2.txt  frame_0017_jpg.rf.95389a2972e333982704dde99ca04c46.txt  frame_0021_jpg.rf.8cc90496d7566745cb23310543082e6f.txt  frame_0023_jpg.rf.a4dcc71f116ac6d5c28c8cc2c148298d.txt  frame_0024_jpg.rf.63db98c077c07c3cfe02c232471a30f8.txt  frame_0027_jpg.rf.5a188bed3d470616a8e14cb047aef30b.txt  frame_0028_jpg.rf.f00014425c23556fb2ba4713da4da2ea.txt
license plate/data/labels/val/: frame_0001_jpg.rf.316f52eb88970fbd01591d36751eca46.txt  frame_0022_jpg.rf.4fe95a569aa7d3cec2845b7834fe61a3.txt
license plate/roboflow_data/: README.dataset.txt  README.roboflow.txt  data.yaml
license plate/roboflow_data/train/labels/: frame_0003_jpg.rf.f0b77e2775be46d9aba6db7b4d7ea998.txt  frame_0004_jpg.rf.afe359661a20b56ab6e3e550b884797e.txt  frame_0009_jpg.rf.3c5d52ee229447c4457368e9dc9e1755.txt  frame_0014_jpg.rf.19947b630562312feb6948e9f61c864c.txt  frame_0016_jpg.rf.83e5baf54dbd71fa4889b0b5be12e864.txt  frame_0019_jpg.rf.6d3ec2c01fbf1d474e043410d2618a78.txt  (+2 more)
license plate/src/license_plate_detector/: __init__.py  cli.py  logger.py  model_impl.py
license plate/tests/: test_model.py
license plate/train/: train.py
(+12 files in other folders)
